Integrating from main to HELIX. Change 411681 by pburgu@pburgu-main on 2012/10/24 09:35:52
        bug:77682
        Disable Jetty timeout for CSV export/import.

        https://reviewboard.eng.vmware.com/r/393884/

http://bugzilla.zimbra.com/show_bug.cgi?id=77682

Copied from Perforce
 Change: 411686